--- a/Today專題/home.html
+++ b/Today專題/home.html
@@ -32,7 +32,7 @@
                     <span></span>
                     <span></span>
                 </button>
-                <!-- 若要開啟搜尋框，將 justify-content-end 改成 justify-content-between -->
+                <!-- 若要開啟搜尋框，將 justify-content-end 改成 justify-content-between，然後搜尋框那行把 d-none 刪除 -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <div class="input-group w-50 border-secondary border rounded d-none">
                         <input type="text" class="form-control border-0" placeholder="輸入目的地、景點、體驗行程或活動名稱…" aria-label="Recipient's username" aria-describedby="search">
